--- a/redsocial.html
+++ b/redsocial.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> 
-    <title>Document</title>
+
+    
+<title>Document</title>
 </head>
 <body>
     <h1> <p>Hola esta es nuestra nueva app </p> </h1>
@@ -29,5 +31,10 @@
 
             <!--División para la segunda ventana -->
 
+
+            <h1>Hola Fem h1 </h1>
+            <h2>hola femtrek h2 </h2>
+            <h3>hola femtrk h3</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil error rerum quos obcaecati velit maiores temporibus necessitatibus? Voluptas, laudantium excepturi placeat possimus architecto aperiam itaque recusandae commodi aut qui illum!</p>
 </body>
 </html>
