--- a/redsocial.html
+++ b/redsocial.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> 
+    <link rel="stylesheet" href="/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Brawler:wght@400;700&family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=DM+Serif+Display:ital@0;1&family=Didact+Gothic&family=Hammersmith+One&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Roboto+Serif:ital,opsz,wght,GRAD@1,8..144,700,-50..100&display=swap" rel="stylesheet">
 
     
 <title>Document</title>
 </head>
 <body>
-    <h1> <p>Hola esta es nuestra nueva app </p> </h1>
+
+
     <!--<img src="./logo soro.jpg" width= 500 height=500>-->
     <!-- Modifica el amcho de la pantalla -->
      
@@ -31,10 +36,5 @@
 
             <!--División para la segunda ventana -->
 
-
-            <h1>Hola Fem h1 </h1>
-            <h2>hola femtrek h2 </h2>
-            <h3>hola femtrk h3</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil error rerum quos obcaecati velit maiores temporibus necessitatibus? Voluptas, laudantium excepturi placeat possimus architecto aperiam itaque recusandae commodi aut qui illum!</p>
 </body>
 </html>
