Actualización del carrusel y carrusel.js

--- a/principal/principal-carrusel.html
+++ b/principal/principal-carrusel.html
@@ -4,38 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles-principal-carrusel.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <title>Document</title>
 </head>
 <body>
     <img id="logo" src="./assets/logo-vectorizado.png">
-
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    
+    <div class="container">
+    <div id="carouselHome" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselHome" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselHome" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselHome" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./assets/women-traveling.jpg" class="d-block w-100" alt="...">
+            <img id="women-traveling" src="./assets/women-traveling.jpg" class="d-block w-100" alt="Mujeres viajeras">
           </div>
           <div class="carousel-item">
-            <img src="./assets/woman-waiting.jpg" class="d-block w-100" alt="...">
+            <img id="woman-waiting" src="./assets/woman-waiting.jpg" class="d-block w-100" alt="Mujer esperando">
           </div>
           <div class="carousel-item">
-            <img src="./assets/friends-travel.jpg" class="d-block w-100" alt="...">
+            <img id="friends-travel" src="./assets/friends-travel.jpg" class="d-block w-100" alt="Amigas viajando">
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselHome" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselHome" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+      </div>
 
-
+     <script src="./principal-carrusel.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
