--- a/principal/principal-carrusel.html
+++ b/principal/principal-carrusel.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles-principal-carrusel.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
     <img id="logo" src="./assets/logo-vectorizado.png">
