Avance actualizado y conectado. Falta agregar contactanos

--- a/Iniciar_sesión/ingreso.html
+++ b/Iniciar_sesión/ingreso.html
@@ -23,7 +23,7 @@
 
                 <!--Esta parte contiene el logo de nuestro producto-->
                 <a class="navbar-brand" href="#">
-                    <img src="../logo-vectorizado.png" alt="Logo" width="130" height="50" class="d-inline-block align-text-top">
+                    <img src="./logo-vectorizado.png" alt="Logo" width="130" height="50" class="d-inline-block align-text-top">
                   </a>
                   <!--Toggler es el botón que se despliega como menú colapsable cuando la pantalla está chiquita-->
                   <button class="navbar-toggler bg-dark-outline" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,22 +35,22 @@
 
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="/principal/principal-carrusel.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Acerca de Nosotras</a>
+                    <a class="nav-link" href="/About Us/about us.html">Acerca de Nosotras</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Contacto</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Comunidad</a>
+                    <a class="nav-link" href="/comunidad/comunidad.html">Comunidad</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Regístrate</a>
+                    <a class="nav-link" href="/Pagina-registro/pagina-registro.html">Regístrate</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Inicia Sesión</a>
+                    <a class="nav-link" href="/Iniciar_sesión/ingreso.html">Inicia Sesión</a>
                   </li>
                 </ul>
               </div>
@@ -62,7 +62,7 @@
     <div class="row">
         <div class="col-sm" id="left">
           
-            <img id="logodos" src="../femtrek3.jpg" class="img-fluid centered-image" alt="Logo FemTrek">
+            <img id="logodos" src="./Logotipo.png" class="img-fluid centered-image" alt="Logo FemTrek">
           
 
 
