--- a/About Us/about us.html
+++ b/About Us/about us.html
@@ -34,22 +34,22 @@
 
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="/principal/principal-carrusel.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Acerca de Nosotras</a>
+                    <a class="nav-link" href="/About Us/about us.html">Acerca de Nosotras</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Contacto</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Comunidad</a>
+                    <a class="nav-link" href="/comunidad/comunidad.html">Comunidad</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Regístrate</a>
+                    <a class="nav-link" href="/Pagina-registro/pagina-registro.html">Regístrate</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Inicia Sesión</a>
+                    <a class="nav-link" href="/Iniciar_sesión/ingreso.html">Inicia Sesión</a>
                   </li>
                 </ul>
               </div>
