--- a/comunidad/comunidad2.html
+++ b/comunidad/comunidad2.html
@@ -37,7 +37,7 @@
 
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="/principal/principal-carrusel.html">Inicio</a>
             </li>
           
             <li class="nav-item">
