--- a/mi perfil/miperfil.html
+++ b/mi perfil/miperfil.html
@@ -36,14 +36,14 @@
   
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="/principal/principal-carrusel.html">Inicio</a>
               </li>
             
               <li class="nav-item">
-                <a class="nav-link" href="#">Comunidad</a>
+                <a class="nav-link" href="/comunidad/comunidad.html">Comunidad</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Configuración</a>
+                <a class="nav-link" href="/Configurar-perfil/configurar.html">Configuración</a>
               </li>
               <!--icono de usuario-->
                 <li class="nav-user-icon" > 
