agrego quizz y configuracion

--- a/Pagina-registro/pagina-registro.html
+++ b/Pagina-registro/pagina-registro.html
@@ -14,7 +14,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
     <!--Link a nuestro archivo de estilos-->
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="/About Us/styles/Styles.css">
     <title>FemTrek</title>
   </head>
 
@@ -27,7 +27,7 @@
 
                 <!--Esta parte contiene el logo de nuestro producto-->
                 <a class="navbar-brand" href="#">
-                    <img src="./logo-vectorizado.png" alt="Logo" width="130" height="50" class="d-inline-block align-text-top">
+                    <img src="/About Us/pics/logo-vectorizado.png" alt="Logo" width="130" height="50" class="d-inline-block align-text-top">
                   </a>
                   <!--Toggler es el botón que se despliega como menú colapsable cuando la pantalla está chiquita-->
                   <button class="navbar-toggler bg-dark-outline" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
