--- a/Iniciar_sesión/ingreso.html
+++ b/Iniciar_sesión/ingreso.html
@@ -41,7 +41,7 @@
                     <a class="nav-link" href="/About Us/about us.html">Acerca de Nosotras</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contacto</a>
+                    <a class="nav-link" href="/ContactoPage/contactoMain.html">Contacto</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="/comunidad/comunidad.html">Comunidad</a>
