--- a/mi perfil/miperfil.html
+++ b/mi perfil/miperfil.html
@@ -82,7 +82,7 @@
               <a class="nav-link" href="/About Us/about us.html">Acerca de Nosotras</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contacto</a>
+              <a class="nav-link" href="/ContactoPage/contactoMain.html">Contacto</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/Pagina-registro/pagina-registro.html">Regístrate</a>
