--- a/comunidad/comunidad.html
+++ b/comunidad/comunidad.html
@@ -37,14 +37,14 @@
 
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/principal/principal-carrusel.html">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
             </li>
           
             <li class="nav-item">
-              <a class="nav-link" href="/comunidad/comunidad2.html">Conectar Viajes</a>
+              <a class="nav-link" href="#">Conectar Viajes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/mi perfil/miperfil.html">Mi perfil</a>
+              <a class="nav-link" href="#">Mi perfil</a>
             </li>
             <!--icono de usuario-->
         <li class="nav-user-icon" > 
