linkeo correcto de about us, comunidad

--- a/comunidad/comunidad2.html
+++ b/comunidad/comunidad2.html
@@ -41,7 +41,7 @@
             </li>
           
             <li class="nav-item">
-              <a class="nav-link" href="#">Conectar Viajes</a>
+              <a class="nav-link" href="/comunidad/comunidad.html">Conectar Viajes</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/mi perfil/miperfil.html">Mi perfil</a>
