--- a/comunidad/comunidad2.html
+++ b/comunidad/comunidad2.html
@@ -63,13 +63,14 @@
   
   <div class="container">
     <!-- Barra lateral izquierda-->
-            <div class="left-sidebar">
+    <div class="row ">
+      <div class="col-md-3 left-sidebar">
               <div class="imp-links">
                 <h2>Viaja en tu ciudad</h2> 
                 <h3>Comunidad</h3> 
-                <a href="# ">  <img src="chat1.png"> Mis publicaciones</a>
-                <a href="# ">  <img src="chat1.png">  Actualizaciones</a>
-                <a href="#" class="btn Exterior" role="button" data-bs-toggle="button" aria-pressed="true">Viaje al Exterior</a>
+                <a href="# " class="btn btn-primary mb-2 d-block">  <img src="chat1.png"> Mis publicaciones</a>
+                <a href="# " class="btn btn-primary mb-2 d-block">  <img src="chat1.png">  Actualizaciones</a>
+                <a href="#" class="btn btn-primary mb-2 d-block" role="button" data-bs-toggle="button" aria-pressed="true">Viaje al Exterior</a>
             </div>
               
             </div>
