--- a/principal/principal-carrusel.html
+++ b/principal/principal-carrusel.html
@@ -21,7 +21,7 @@
 
             <!--Esta parte contiene el logo de nuestro producto-->
             <a class="navbar-brand" href="#">
-                <img src="./logo-vectorizado.png" alt="Logo" width="130" height="50" class="d-inline-block align-text-top">
+                <img src="./assets/logo-vectorizado.png" alt="Logo FemTrek" width="130" height="50" class="d-inline-block align-text-top">
               </a>
               <!--Toggler es el botón que se despliega como menú colapsable cuando la pantalla está chiquita-->
               <button class="navbar-toggler bg-dark-outline" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
