Cambio en botones

--- a/principal/principal-carrusel.html
+++ b/principal/principal-carrusel.html
@@ -33,9 +33,6 @@
 
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/principal/principal-carrusel.html">Inicio</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="/About Us/about us.html">Acerca de Nosotras</a>
               </li>
               <li class="nav-item">
@@ -43,12 +40,6 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/comunidad/comunidad.html">Comunidad</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/Pagina-registro/pagina-registro.html">Regístrate</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/Iniciar_sesión/ingreso.html">Inicia Sesión</a>
               </li>
             </ul>
           </div>
@@ -62,8 +53,9 @@
 <!--Termina la Navbar-->
 
    <!-- Logo para visibilizar-->
-   
-    <img id="logo" src="./assets/logo-vectorizado.png" alt="Logo FemTrek">
+    <div class="logobody">
+       <img id="logo" src="./assets/logo-vectorizado.png" alt="Logo FemTrek">
+    </div>
     
     <!--Empieza el carrusel-->
     <div class="container">
@@ -101,8 +93,8 @@
       
       <!--Div container para agregar campos de registro o inicio de sesión-->
       <div class="signIn-signUp">
-           <button type="button" class="btn btn-primary btn-lg">Registro</button>
-           <button type="button" class="btn btn-secondary btn-lg">Inicia Sesión</button>
+           <button type="button" class="btn">Registro</button>
+           <button type="button" class="btn">Inicia Sesión</button>
       </div>
 
      <script src="./principal-carrusel.js"></script>
