--- a/principal/principal-carrusel.html
+++ b/principal/principal-carrusel.html
@@ -93,8 +93,8 @@
       
       <!--Div container para agregar campos de registro o inicio de sesión-->
       <div class="signIn-signUp">
-           <button type="button" class="btn">Registro</button>
-           <button type="button" class="btn">Inicia Sesión</button>
+           <button type="button" id="btn">Regístrate</button>
+           <button type="button" id="btn">Inicia Sesión</button>
       </div>
 
      <script src="./principal-carrusel.js"></script>
