--- a/principal/principal-carrusel.html
+++ b/principal/principal-carrusel.html
@@ -65,17 +65,25 @@
           <button type="button" data-bs-target="#carouselHome" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselHome" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselHome" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselHome" data-bs-slide-to="3" aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselHome" data-bs-slide-to="4" aria-label="Slide 5"></button>
         </div>
         <!--En este div colocamos cada canva del carrusel y ahí mandamos llamar las imágenes-->
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img id="women-traveling" src="./assets/women-traveling.jpg" class="d-block w-100" alt="Mujeres viajeras">
+            <img id="1" src="./assets/1.png" class="d-block w-100" alt="Mapa">
           </div>
           <div class="carousel-item">
-            <img id="woman-waiting" src="./assets/woman-waiting.jpg" class="d-block w-100" alt="Mujer esperando">
+            <img id="2" src="./assets/2.png" class="d-block w-100" alt="Amigas viajando">
           </div>
           <div class="carousel-item">
-            <img id="friends-travel" src="./assets/friends-travel.jpg" class="d-block w-100" alt="Amigas viajando">
+            <img id="3" src="./assets/3.png" class="d-block w-100" alt="Taxi seguro">
+          </div>
+          <div class="carousel-item">
+            <img id="4" src="./assets/4.png" class="d-block w-100" alt="Conexión de amigas">
+          </div>
+          <div class="carousel-item">
+            <img id="5" src="./assets/5.png" class="d-block w-100" alt="Encuéntralo en FemTrek">
           </div>
         </div>
 
