--- a/principal/principal-carrusel.html
+++ b/principal/principal-carrusel.html
@@ -8,6 +8,39 @@
     <title>Document</title>
 </head>
 <body>
+
+    <!--Empieza la sección del NavBar-->
+    <section class="header">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary ms-auto">
+          <div class="container-fluid">
+
+                <!--Toggler es el botón que se despliega como menú colapsable cuando la pantalla está chiquita-->
+                <button class="navbar-toggler bg-dark-outline" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+            
+                <!--La lista de las secciones del NavBar-->
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+              <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link" href="/About Us/about us.html">Acerca de Nosotras</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/ContactoPage/contactoMain.html">Contacto</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/Pagina-registro/pagina-registro.html">Regístrate</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/Iniciar_sesión/ingreso.html">Inicia Sesión</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+</section>
+
     <img id="logo" src="./assets/logo-vectorizado.png">
     
     <div class="container">
@@ -19,10 +52,14 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img id="women-traveling" src="./assets/women-traveling.jpg" class="d-block w-100" alt="Mujeres viajeras">
+            <video autoplay>
+              <source src="./assets/logo_video.mp4" type="video/mp4">
+            </video>
           </div>
-          <div class="carousel-item">
-            <img id="woman-waiting" src="./assets/woman-waiting.jpg" class="d-block w-100" alt="Mujer esperando">
+          <div class="carousel-item active">
+            <video autoplay>
+              <source src="./assets/travel_video.mp4" type="video/mp4">
+            </video>
           </div>
           <div class="carousel-item">
             <img id="friends-travel" src="./assets/friends-travel.jpg" class="d-block w-100" alt="Amigas viajando">
