Se agrega FileReader para publicar imagen

--- a/comunidad/comunidad2.html
+++ b/comunidad/comunidad2.html
@@ -94,6 +94,7 @@
 
               <div class="post-input-container mb-3">
                 <textarea id="postContent" class="form-control" rows="3" placeholder="¿Que quieres compartir hoy?/Crea una publicación...." ></textarea>
+                <input type="file" id="postImage" class="form-control mt-3">
                 <!--Subir p.ublicaciones-->
                 <div class="add-post mt-3">
                   <button class="btn btn-primary me-2 d-flex align-items-center" onclick="addPost()">
