--- a/principal/principal-carrusel.html
+++ b/principal/principal-carrusel.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-    <!--Empieza la sección del NavBar-->
-    <section class="header">
+  <!--Empieza la sección del NavBar-->
+  <section class="header">
       <nav class="navbar navbar-expand-lg bg-body-tertiary ms-auto">
           <div class="container-fluid">
 
@@ -39,44 +39,63 @@
             </div>
           </div>
         </nav>
-</section>
+  </section>
 
     <img id="logo" src="./assets/logo-vectorizado.png">
-    
-    <div class="container">
-    <div id="carouselHome" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselHome" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselHome" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselHome" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
+
+  <!--Empieza carrusel-->
+  <section class="carousel">
+    <!--data-ride permite iniciar el carrusel tan pronto se carga la pagina-->
+    <div id="carouselHome" class="carousel slide" data-ride="carousel">
+        <!--Indicadores: Botones al inferior del carrusel-->
+        <ol class="carousel-indicators">
+          <!--1) data-target = identifacion del carrusel
+              2) data-slide-to = a que diapositiva ir cuando se da click
+            3) active = se debe agregar a alguna diapositiva para que sea visible-->
+          <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselIndicators" data-slide-to="2"></li>
+        </ol>
+
+        <!--Diapositivas: Imagenes que se muestran en el carrusel-->
         <div class="carousel-inner">
+          <!--active = necesario en un solo elemento para que sea visible el carrusel-->
           <div class="carousel-item active">
-            <video autoplay>
+            <!--Insertar video
+                autoplay = comenzar automaticamente.
+                img-fluid = escalar proporcionalmente.
+                d-none = evita reproduccion automatica
+                d-md-block = permite reproduccion en pantallas grandes y medianas-->
+            <video id="logo-video" class="img-fluid" autoplay>
+              <!-- tipo = especificar mp4 para que sea reconocido y visible--->
               <source src="./assets/logo_video.mp4" type="video/mp4">
             </video>
           </div>
-          <div class="carousel-item active">
-            <video autoplay>
+          <div class="carousel-item">
+            <video id="women-connected" class="img-fluid" autoplay>
               <source src="./assets/travel_video.mp4" type="video/mp4">
             </video>
-          </div>
+          </div> 
           <div class="carousel-item">
-            <img id="friends-travel" src="./assets/friends-travel.jpg" class="d-block w-100" alt="Amigas viajando">
+            <!--d-block w-100 = para el ancho total de la pantalla-->
+            <img id="friends-travel" src="./assets/flights_airport.png" class="d-block w-100" alt="Volando juntas">
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselHome" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselHome" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-      </div>
 
-     <script src="./principal-carrusel.js"></script>
+        <!--Botones siapositiva previa y siguiente:-->
+        <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+          <!--span = se usar por convencion, a diferencia de <div> que es un elemento de bloqueo, <span> es un elemento 'inline'.-->
+          <span class="carousel-control-prev-icon"></span>
+          <span class="visually-hidden">Previous</span>
+          </a>
+        <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon"></span>
+          <span class="visually-hidden">Next</span>
+        </a>
+    </div>
+  </section>
+
+      <script src="./principal-carrusel.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
