--- a/comunidad/comunidad2.html
+++ b/comunidad/comunidad2.html
@@ -151,6 +151,9 @@
 <!--Link para JS de publicaciones-->
 <script src="./publicaciones.js"></script>
 
+<!--arraypub-->
+<!--<script src="./arraypub.js"></script>-->
+
   <!-- Footer -->
   <footer class="footer mt-auto py-3 bg-light">
     <div class="container text-center">
