--- a/comunidad/comunidad2.html
+++ b/comunidad/comunidad2.html
@@ -149,10 +149,10 @@
  <!--<div class="left-sidebar"></div>-->
 
 <!--Link para JS de publicaciones-->
-<script src="./publicaciones.js"></script>
+<!--<script src="./publicaciones.js"></script>-->
 
 <!--arraypub-->
-<!--<script src="./arraypub.js"></script>-->
+<script src="./arraypub.js"></script>
 
   <!-- Footer -->
   <footer class="footer mt-auto py-3 bg-light">
