--- a/principal/principal-carrusel.html
+++ b/principal/principal-carrusel.html
@@ -101,8 +101,8 @@
       
       <!--Div container para agregar campos de registro o inicio de sesión-->
       <div class="signIn-signUp">
-           <button type="button" id="btn">Regístrate</button>
-           <button type="button" id="btn">Inicia Sesión</button>
+           <button type="button" id="btn" href="/Pagina-registro/pagina-registro.html">Regístrate</button>
+           <button type="button" id="btn" href="/Iniciar_sesión/ingreso.html">Inicia Sesión</button>
       </div>
 
      <script src="./principal-carrusel.js"></script>
