--- a/Quizz/quizz.html
+++ b/Quizz/quizz.html
@@ -65,5 +65,56 @@
   </section>
   
     <P>AQUI VA EL QUIZZ</P>
+<!--COLUMNA IZQUIERDA -->
+      <div class="row ">
+          <div class="col-sm " id="col-izq">
+            <form>
+              <label for="cafeterias">Cafeterías/Restaurantes</label>
+              <input type="letter" id="cafeterias" placeholder="Mis cafeterias favoritas son">
+            </form>
+            <form>
+              <label for="Paises ">Países de interés</label>
+              <input type="letter" id="Paises " placeholder="Me gustaria conocer...">
+            </form>
+            <form>
+              </p> <label for="Deportes">Deportes</label>
+              <p><input type="letter" id="Deportes" placeholder="Práctico..."></p>
+            </form>
+          </div>
+          <!--COLUMNA DE EN MEDIO SECCIÓN IMAGEN  -->
+          <div class="col-sm " id="col-medium">
+
+            <form>
+              <label for="Soy">¿Quien soy?</label>
+              <input type="letter" id="Soy" placeholder="Soy una persona ...">
+            </form>
+                <img src="/About Us/pics/chica caminando.png" class="card-img-top" >
+                
+          </div>    
+
+
+        <!--COLUMNA DERECHA  -->
+          <div class="col-sm" id="col-der">
+            <form>
+              <label for="Pasatiempos ">Pasatiempos</label>
+              <input type="letter" id="Pasatiempos" placeholder="En mi tiempo libre me gusta..">
+            </form>
+            <form>
+              <label for="Música  ">Música</label>
+              <p><input type="letter" id="Música " placeholder="Mis música favorita es ..."></p>
+            </form>
+            <form>
+              <label for="Temas">Temas de música</label>
+              <input type="letter" id="Temas" placeholder="Me interesa el tema de">
+            </form>
+          </div>
+              
+      </div>
+      <!--Botones-->
+    <a href="#" class="btn btn-primary">En otro momento </a>
+    <!--El botón guardar info debe funcionar sólo detecta un cambio -->
+    <a href="#" class="btn btn-primary">Guardar información </a>
+
+   
 </body>
 </html>
