--- a/principal/principal-carrusel.html
+++ b/principal/principal-carrusel.html
@@ -52,9 +52,18 @@
   </section>
 
    <!-- Logo para visibilizar-->
-   <div class="logobody">
-    <img id="logo" src="./assets/logo-vectorizado.png" alt="Logo FemTrek">
- </div>
+
+  <div class="logobody">
+  <!--INSERTAR VIDEO
+      autoplay = comenzar automaticamente.
+      img-fluid = escalar proporcionalmente.
+      d-none = evita reproduccion automatica
+      d-md-block = permite reproduccion en pantallas grandes y medianas-->
+  <video id="logo" class="img-fluid" autoplay alt="Logo con movimiento">
+    <!-- tipo = especificar mp4 para que sea reconocido y visible---> 
+    <source src="./assets/1_logo_video.mp4" type="video/mp4">
+  </video>
+  </div>
 
   <!--Empieza CARRUSEL-->
   <section class="carousel">
@@ -71,7 +80,6 @@
         <li data-target="#carouselHome" data-slide-to="3"></li>
         <li data-target="#carouselHome" data-slide-to="4"></li>
         <li data-target="#carouselHome" data-slide-to="5"></li>
-        <li data-target="#carouselHome" data-slide-to="6"></li>
       </ol>
 
       <!--DIAPOSITIVAS: Imagenes que se muestran en el carrusel-->
@@ -79,40 +87,28 @@
       <!--DIAPOSITIVA 1-->
         <!--active = necesario en un solo elemento para que sea visible el carrusel-->
         <div class="carousel-item active">
-          <!--INSERTAR VIDEO
-              autoplay = comenzar automaticamente.
-              img-fluid = escalar proporcionalmente.
-              d-none = evita reproduccion automatica
-              d-md-block = permite reproduccion en pantallas grandes y medianas-->
-          <video id="1" class="img-fluid" autoplay alt="Logo con movimiento">
-            <!-- tipo = especificar mp4 para que sea reconocido y visible--->
-            <source src="./assets/1_logo_video.mp4" type="video/mp4">
-          </video>
-        </div>
-      <!--DIAPOSITIVA 2-->
-        <div class="carousel-item">
           <video id="2" class="img-fluid" autoplay alt="Video viajemos juntas">
             <source src="./assets/2_travel-video.mp4" type="video/mp4">
           </video>
         </div> 
-      <!--DIAPOSITIVA 3-->
+      <!--DIAPOSITIVA 2-->
         <div class="carousel-item">
           <!--d-block w-100 = para el ancho total de la pantalla-->
           <img id="3" src="./assets/3_map.png" class="d-block w-100" alt="Mapa">
         </div>
-      <!--DIAPOSITIVA 4-->
+      <!--DIAPOSITIVA 3-->
         <div class="carousel-item">
           <img id="4" src="./assets/4_friends.png" class="d-block w-100" alt="Amigas viajando">
         </div>
-      <!--DIAPOSITIVA 5-->
+      <!--DIAPOSITIVA 4-->
         <div class="carousel-item">
           <img id="5" src="./assets/5_taxi.png" class="d-block w-100" alt="Taxi seguro">
         </div>
-      <!--DIAPOSITIVA 6-->
+      <!--DIAPOSITIVA 5-->
         <div class="carousel-item">
           <img id="6" src="./assets/6_comunity.png" class="d-block w-100" alt="Conexión de amigas">
         </div>
-      <!--DIAPOSITIVA 7-->
+      <!--DIAPOSITIVA 6-->
         <div class="carousel-item">
           <img id="7" src="./assets/7_find_FemTrek.png" class="d-block w-100" alt="Encuéntralo en FemTrek">
         </div>
@@ -133,6 +129,9 @@
     </div>
   </section>
 
+    <!--Quienes somos / Que hacemos-->
+
+
     <!--Para agregar campos de registro o inicio de sesión-->
     <div class="signIn-signUp">
       <form action="/Pagina-registro/pagina-registro.html">
@@ -146,4 +145,4 @@
     <script src="./principal-carrusel.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
 </body>
-</html>
+</html>>
