Mision, vision, values and drawn carousel movement

--- a/principal/principal-carrusel.html
+++ b/principal/principal-carrusel.html
@@ -52,7 +52,7 @@
   </section>
 
    <!-- Logo para visibilizar-->
-
+  <div class="images-container">
   <div class="logobody">
   <!--INSERTAR VIDEO
       autoplay = comenzar automaticamente.
@@ -119,18 +119,49 @@
       <a class="carousel-control" id="carousel-control-prev" href="#carouselHome" role="button" data-slide="prev">
         <!--span = se usar por convencion, a diferencia de <div> que es un elemento de bloqueo, <span> es un elemento 'inline'.-->
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
+        <span class="sr-only">Previous</span>
       </a>
       <!--Boton del lado DERECHO (NEXT)-->
       <a class="carousel-control" id="carousel-control-next" href="#carouselHome" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
+        <span class="sr-only">Next</span>
       </a>
     </div>
   </section>
-
-    <!--Quienes somos / Que hacemos-->
-
+  </div>
+    <!--Ques es FemTrek / Que hace-->
+  <div class="about-FemTrek">
+    <h1 class="Que es FemTrek">
+      De mujeres para mujeres
+      <br>
+      Una app para viajar seguras
+    </h1>
+      <h3>
+        Generemos una comunidad de apoyo 
+        <br>
+        para no restringirnos de una vida plena.
+      </h3>
+  </div>
+  <div class="identidad-FemTrek">
+    <h1 class="Misión">
+      Misión
+    </h1>
+      <p>
+        Generar un espacio seguro, interactivo e innovador que permita la convivencia sana entre mujeres y las apoye en su movilidad, mejorando su sentimiento de seguridad a donde sea que vayan.
+      </p>
+    <h1 class="Visión">
+      Visión
+    </h1>
+      <p>
+        Ser la primera red social exclusivamente para mujeres latinoamericanas que les permita sentirse seguras en cuanto a movilidad, comunicación y convivencia.
+      </p>
+    <h1 class="Valores">
+      Valores
+    </h1>
+      <p>
+        Sororidad - Seguridad - Respeto - Transparencia
+      </p>
+  </div>
 
     <!--Para agregar campos de registro o inicio de sesión-->
     <div class="signIn-signUp">
