--- a/principal/principal-carrusel.html
+++ b/principal/principal-carrusel.html
@@ -173,7 +173,64 @@
       </form>
     </div>
 
-    <script src="./principal-carrusel.js"></script>
+    <!--Pie de pagina-->
+    <div class="last-part">
+      <footer class="footer_container">
+        <!--Botones para descargar app-->
+        <section class="footer_install">
+          <a class="link-android-apple" href="#">
+            <button id="btn-android-apple" type="button">
+              <img src="https://cdn.peanut-app.io/static/media/robot.e4ab3d69.svg" alt="Play Store">
+            </button>
+          </a>
+          <a class="link-android-apple" href="#">
+            <button id="btn-android-apple" type="button">
+              <img src="https://cdn.peanut-app.io/static/media/apple.2fbc6a2d.svg" alt="Apple Store">
+            </button>
+          </a>
+        </section>
+        <!--Redes sociales-->
+        <section class="footer_social">
+          <ul>
+            <li>
+              <a href="#">
+                <img src="https://cdn.peanut-app.io/static/media/facebook.164dd68c.svg" alt="Facebook">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="https://cdn.peanut-app.io/static/media/instagram.c511f6bb.svg" alt="Instagram">
+              </a>
+            </li>
+          </ul>
+        </section>
+        <!--Contacto-->
+        <section class="footer_contact">
+          <ul>
+            <li>
+              FemTrek para empresas
+              <a href="#">empresarial@femtrek.com</a>
+            </li>
+            <li>
+              Prensa
+              <a href="#">prensa@femtrek.com</a>
+            </li>
+            <li>
+              ¿Algo más?
+              <a href="#">info@femtrek.com</a>
+            </li>
+          </ul>
+        </section>
+        <!--Copyright-->
+        <section class="footer_copyright">
+          <p>
+            © 2021 FemTrek. Todos los derechos reservados.
+          </p>
+        </section>
+      </footer>
+    </div>
+
+     <script src="./principal-carrusel.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
 </body>
-</html>>
+</html>
