Update about me (Diana)

--- a/About Us/about us.html
+++ b/About Us/about us.html
@@ -133,7 +133,7 @@
                   <div class="card-body">
                       <img src="pics/Diana-Garcia.jpeg" alt="" class="img-fluid rounded-circle">
                   <h3 class="card-title py-2">Diana García</h3>
-                  <p class="card-text"> Curiosa y disidente por naturaleza. Soy estudiante de la máxima casa de estudios: UNAM.
+                  <p class="card-text"> Curiosa y disidente por naturaleza. Soy una amante de la ciencia y el arte, apasionada por la tecnología.
                      </p>
                   
                   </div>
