--- a/principal/principal-carrusel.html
+++ b/principal/principal-carrusel.html
@@ -7,7 +7,6 @@
     <!--Link a nuestros archivos de estilos-->
   <link rel="stylesheet" href="./styles-principal-carrusel.css">
 
-
     <!--Links de Bootstrap-->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
@@ -101,8 +100,8 @@
       
       <!--Div container para agregar campos de registro o inicio de sesión-->
       <div class="signIn-signUp">
-           <button type="button" id="btn" href="/Pagina-registro/pagina-registro.html">Regístrate</button>
-           <button type="button" id="btn" href="/Iniciar_sesión/ingreso.html">Inicia Sesión</button>
+           <a type="button" id="btn" href="/Pagina-registro/pagina-registro.html">Regístrate</a>
+           <a type="button" id="btn" href="/Iniciar_sesión/ingreso.html">Inicia Sesión</a>
       </div>
 
      <script src="./principal-carrusel.js"></script>
