--- a/paginaComunidad/comunidadMain.html
+++ b/paginaComunidad/comunidadMain.html
@@ -14,6 +14,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
   <!-- // No olvides estar aqui   -->
   <link rel="stylesheet" href="./comunidadStyle.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/060659d31d.js" crossorigin="anonymous"></script>
 
@@ -150,8 +154,8 @@
         
                         <!--Subir p.ublicaciones-->
                         <div class="add-post mt-3">
-                          <button class="btn btn-primary me-2 d-flex align-items-center" onclick="addPost()">
-                            <img src="" alt="" class="me-2"> Publicar
+                          <button id="post-btn" type="button" class="btn btn-primary me-2 d-flex align-items-center" onclick="addPost()" alt="Button to post" class="me-2"> 
+                            Publicar
                           </button>
                         </div>
                       </div>
@@ -188,7 +192,6 @@
 
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
         
-
   </body>
 </html>
 
