validar contraseñas iguales

--- a/Pagina-registro/pagina-registro.html
+++ b/Pagina-registro/pagina-registro.html
@@ -82,22 +82,22 @@
 
         <div class="mb-3">
             <label class="form-label">Nombre(s)</label>
-            <input type="text" class="form-control" id="userNames" placeholder="María">
+            <input type="text" class="form-control" id="userNames" name="txt_name" placeholder="María">
           </div>
 
         <div class="mb-3">
             <label class="form-label">Apellido(s)</label>
-            <input type="text" class="form-control" id="userLastNames" placeholder="Félix">
+            <input type="text" class="form-control" id="userLastNames" name="txt_lastnames" placeholder="Félix">
           </div>
 
         <div class="mb-3">
         <label class="form-label">Correo electrónico</label>
-        <input type="email" class="form-control" id="userEmail" placeholder="nombre@ejemplo.com">
+        <input type="email" class="form-control" id="userEmail" name="txt_email" placeholder="nombre@ejemplo.com">
       </div>
 
       <div class="mb-3">
         <label class="form-label">Fecha de Nacimiento</label>
-        <input type="date" class="form-control" id="userAge" placeholder="Debes que tener al menos 18 años para unirte">
+        <input type="date" class="form-control" id="userAge" name="txt_age" placeholder="Debes que tener al menos 18 años para unirte">
       </div>
 
       <div class="mb-3">
@@ -141,13 +141,13 @@
 
       <div class="mb-3">
         <label class="form-label">Contraseña</label>
-        <input type="password" class="form-control" id="passwords">
-        <p><small>Recuerda colocar una contraseña que contenga al menos un número, una mayúscula, y un caracter especial</small></p>
+        <input type="password" class="form-control" id="passwords" name="txt_password">
+        <p><small>Recuerda colocar una contraseña que contenga al menos un número, una mayúscula, y un número</small></p>
       </div>
 
       <div class="mb-3">
         <label class="form-label">Repetir contraseña</label>
-        <input type="password" class="form-control" id="passwordClone">
+        <input type="password" class="form-control" id="passwordClone" name="txt_passwordClone">
         <p><small>Vuelve a escribir tu contraseña</small></p>
       </div>
 
