Páginas bien linkeadas

--- a/principal/principal-carrusel.html
+++ b/principal/principal-carrusel.html
@@ -38,7 +38,7 @@
                 <a class="nav-link" href="/ContactoPage/contactoMain.html">Contacto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/comunidad/comunidad.html">Comunidad</a>
+                <a class="nav-link" href="/paginaComunidad/comunidadMain.html">Comunidad</a>
               </li>
             </ul>
           </div>
