--- a/Iniciar_sesión/ingreso.html
+++ b/Iniciar_sesión/ingreso.html
@@ -44,7 +44,7 @@
                     <a class="nav-link" href="/ContactoPage/contactoMain.html">Contacto</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/comunidad/comunidad.html">Comunidad</a>
+                    <a class="nav-link" href="/paginaComunidad/comunidadMain.html">Comunidad</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="/Pagina-registro/pagina-registro.html">Regístrate</a>
