--- a/mi perfil/miperfil.html
+++ b/mi perfil/miperfil.html
@@ -40,7 +40,7 @@
               </li>
             
               <li class="nav-item">
-                <a class="nav-link" href="/comunidad/comunidad.html">Comunidad</a>
+                <a class="nav-link" href="/paginaComunidad/comunidadMain.html">Comunidad</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/Configurar-perfil/configurar.html">Configuración</a>
