--- a/paginaComunidad/comunidadMain.html
+++ b/paginaComunidad/comunidadMain.html
@@ -48,22 +48,16 @@
               <div  class="collapse navbar-collapse" id="navbarSupportedContent">
                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                        <li class="nav-item">
-                         <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                         <a class="nav-link active" aria-current="page" href="/principal/principal-carrusel.html">Inicio</a>
                        </li>
                        <li class="nav-item">
-                         <a class="nav-link" href="#">Acerca de Nosotras</a>
+                         <a class="nav-link" href="/About Us/about us.html">Acerca de Nosotras</a>
                        </li>
                        <li class="nav-item">
-                         <a class="nav-link" href="#">Contacto</a>
+                         <a class="nav-link" href="/ContactoPage/contactoMain.html">Contacto</a>
                        </li>
                        <li class="nav-item">
                          <a class="nav-link" href="#">Comunidad</a>
-                       </li>
-                       <li class="nav-item">
-                         <a class="nav-link" href="#">Regístrate</a>
-                       </li>
-                       <li class="nav-item">
-                         <a class="nav-link" href="#">Iniciar Sesión</a>
                        </li>
                    </ul>
               </div>
