--- a/Configurar-perfil/configurar.html
+++ b/Configurar-perfil/configurar.html
@@ -55,7 +55,7 @@
   <!--Empieza la sección del formulario de configuración de perfil-->
 
    <div class="container">
-      <h2 > Configuración de Perfil</h2> 
+      <h3 > Configuración</h3> 
       
       <!--formulario datos del usuario-->
       <form method="post" action="#" onctype="multipart/form-data"> <!-- para permitir la subida de archivos--> 
@@ -82,11 +82,11 @@
               </form>
       <!--borrar cuenta-->
       <p>Borrar cuenta</p>
-      <p>Al eliminar tu cuenta borraremos toda tu información</p>
+      <p>Al eliminar tu cuenta borraremos toda tu información  
       <button id="deleteAccountButton" onclick="deleteAccount()">Borrar Cuenta</button>
-      
+    </p>
       <!--guardar cambios-->
-      <button type="button" onclick="saveChanges()">Guardar Cambios</button>
+      <button type="button" onclick="saveChanges()">Guardar Cambios</button> 
   </div>
 
 
