--- a/Pagina-registro/pagina-registro.html
+++ b/Pagina-registro/pagina-registro.html
@@ -75,7 +75,7 @@
 
       <div class="col-md-9" >
     
-      <h1>Formulario de registro</h1>
+      <h1>Vuélvete parte de FemTrek</h1>
       <p> Ya casi eres parte de la comunidad, sólo llena este breve formulario para comenzar </p>
  
        <form class="form-register">
