--- a/principal/principal-carrusel.html
+++ b/principal/principal-carrusel.html
@@ -8,9 +8,6 @@
   <link rel="stylesheet" href="./styles-principal-carrusel.css">
 
 
-    <!--Links de Bootstrap-->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    
     <!--Link a nuestros archivos de estilos-->
   <link rel="stylesheet" href="./styles-principal-carrusel.css">
 
@@ -18,7 +15,7 @@
     <!--Links de Bootstrap-->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
-    <title>Home</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Home</title>
 </head>
 <body>
@@ -47,12 +44,6 @@
                 <li class="nav-item">
                   <a class="nav-link" href="/ContactoPage/contactoMain.html">Contacto</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/Pagina-registro/pagina-registro.html">Regístrate</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/Iniciar_sesión/ingreso.html">Inicia Sesión</a>
-                </li>
               </ul>
             </div>
           </div>
@@ -76,31 +67,25 @@
   <!--Empieza CARRUSEL-->
   <section class="carousel">
     <!--data-ride permite iniciar el carrusel tan pronto se carga la pagina-->
-    <div id="carouselHome" class="carousel slide" data-ride="carousel">
+    <div id="carouselHome" class="carousel slide" data-bs-ride="carousel">
       <!--INDICADORES: Botones al inferior del carrusel-->
       <ol class="carousel-indicators">
         <!--1) data-target = identifacion del carrusel
             2) data-slide-to = a que diapositiva ir cuando se da click
             3) active = se debe agregar a alguna diapositiva para que sea visible-->
-        <li data-target="#carouselHome" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselHome" data-slide-to="1"></li>
-        <li data-target="#carouselHome" data-slide-to="2"></li>
-        <li data-target="#carouselHome" data-slide-to="3"></li>
-        <li data-target="#carouselHome" data-slide-to="4"></li>
-        <li data-target="#carouselHome" data-slide-to="5"></li>
+        <li data-bstarget="#carouselHome" data-bs-slide-to="0" class="active"></li>
+        <li data-bs-target="#carouselHome" data-bs-slide-to="1"></li>
+        <li data-bs-target="#carouselHome" data-bs-slide-to="2"></li>
+        <li data-bs-target="#carouselHome" data-bs-slide-to="3"></li>
+        <li data-bs-starget="#carouselHome" data-bs-slide-to="4"></li>
       </ol>
 
       <!--DIAPOSITIVAS: Imagenes que se muestran en el carrusel-->
       <div class="carousel-inner">
       <!--DIAPOSITIVA 1-->
         <!--active = necesario en un solo elemento para que sea visible el carrusel-->
-        <div class="carousel-item active">
-          <video id="2" class="img-fluid" autoplay alt="Video viajemos juntas">
-            <source src="./assets/2_travel-video.mp4" type="video/mp4">
-          </video>
-        </div> 
       <!--DIAPOSITIVA 2-->
-        <div class="carousel-item">
+        <div class="carousel-item active">
           <!--d-block w-100 = para el ancho total de la pantalla-->
           <img id="3" src="./assets/3_map.png" class="d-block w-100" alt="Mapa">
         </div>
@@ -124,13 +109,13 @@
 
       <!--BOTONES FLECHA para cambiar de diapositiva a cada lado del carrusel:-->
       <!--Boton del lado IZQUIERDO (PREVIOUS)-->
-      <a class="carousel-control" id="carousel-control-prev" href="#carouselHome" role="button" data-slide="prev">
+      <a class="carousel-control-prev"  href="#carouselHome" role="button" data-bs-slide="prev">
         <!--span = se usar por convencion, a diferencia de <div> que es un elemento de bloqueo, <span> es un elemento 'inline'.-->
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
       <!--Boton del lado DERECHO (NEXT)-->
-      <a class="carousel-control" id="carousel-control-next" href="#carouselHome" role="button" data-slide="next">
+      <a class="carousel-control-next"  href="#carouselHome" role="button" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
@@ -138,7 +123,7 @@
   </section>
   </div>
     <!--Ques es FemTrek / Que hace-->
-  <div class="about-FemTrek">
+  <div id="fem" class="about-FemTrek">
     <h1 class="Que es FemTrek">
       De mujeres para mujeres
       <br>
@@ -174,62 +159,68 @@
     <!--Para agregar campos de registro o inicio de sesión-->
     <div class="signIn-signUp">
       <form action="/Pagina-registro/pagina-registro.html">
-        <button type="submit" id="btn">Regístrate</button>
+        <a href="/Pagina-registro/pagina-registro.html" type="submit" id="btn">Regístrate</a>
       </form>
       <form action="/Iniciar_sesión/ingreso.html">
-        <button type="submit" id="btn">Inicia Sesión</button>
+        <a href="/Iniciar_sesión/ingreso.html" type="submit" id="btn">Iniciar Sesión</a>
       </form>
     </div>
+    <br>
+    <br>
+
 
     <!--Pie de pagina-->
-    <div class="last-part">
-      <footer class="footer_container">
-        <!--Botones para descargar app-->
-        <section class="footer_install">
-          <a class="link-android-apple" href="#">
-            <button id="btn-android-apple" type="button">
-              <img src="https://cdn.peanut-app.io/static/media/robot.e4ab3d69.svg" alt="Play Store">
-            </button>
-          </a>
-          <a class="link-android-apple" href="#">
-            <button id="btn-android-apple" type="button">
-              <img src="https://cdn.peanut-app.io/static/media/apple.2fbc6a2d.svg" alt="Apple Store">
-            </button>
-          </a>
-        </section>
-        <!--Redes sociales-->
-        <section class="footer_social">
-          <ul>
-            <li>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col-sm">
+             <!--Botones para descargar app-->
+             <section class="footer_install">
               <a href="#">
-                <img src="https://cdn.peanut-app.io/static/media/facebook.164dd68c.svg" alt="Facebook">
+              <button class="download" id="btn-android-apple"   type="button">
+                <i class="bi bi-google-play"> PlayStore</i>
+              </button>
               </a>
-            </li>
-            <li>
               <a href="#">
-                <img src="https://cdn.peanut-app.io/static/media/instagram.c511f6bb.svg" alt="Instagram">
+              <button class="download" id="btn-android-apple" type="button">
+                <i class="bi bi-apple"> iStore</i>
+              </button>
               </a>
-            </li>
-          </ul>
-        </section>
+              </section>  
+        </div>
+        <div class="col-sm">
+          <section class="footer_social">
+            <a id="facebook" href="#">
+              <i class="bi bi-facebook"> Facebook</i>
+            </a>
+            <a id="Instagram" href="#">
+              <i class="bi bi-instagram"> Instagram</i>
+            </a>
+     </section>
+        </div>
+        <div class="col-sm">
         <!--Contacto-->
         <section class="footer_contact">
           <ul>
-            <li>
-              FemTrek para empresas
-              <a href="#">empresarial@femtrek.com</a>
-            </li>
-            <li>
-              Prensa
-              <a href="#">prensa@femtrek.com</a>
-            </li>
-            <li>
-              ¿Algo más?
-              <a href="#">info@femtrek.com</a>
-            </li>
+          <li>
+             FemTrek para empresas
+            <a href="#">empresarial@femtrek.com</a>
+          </li>
+          <li>
+             Prensa
+            <a href="#">prensa@femtrek.com</a>
+          </li>
+          <li>
+             ¿Algo más?
+            <a href="#">info@femtrek.com</a>
+          </li>
           </ul>
-        </section>
-        <!--Copyright-->
+       </section>
+
+        </div>
+      </div>
+    </div>
+
+        <!--Copyright--> 
         <section class="footer_copyright">
           <p>
             © 2021 FemTrek. Todos los derechos reservados.
@@ -239,6 +230,7 @@
     </div>
 
      <script src="./principal-carrusel.js"></script>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
 </body>
 </html> 
