--- a/principal/Home.html
+++ b/principal/Home.html
@@ -68,19 +68,19 @@
         <!--En este div colocamos cada canva del carrusel y ahí mandamos llamar las imágenes-->
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img id="1" src="./assets/1.png" class="d-block w-100" alt="Mapa">
+            <img id="1" src="./assets/1.png" alt="Mapa">
           </div>
           <div class="carousel-item">
-            <img id="2" src="./assets/2.png" class="d-block w-100" alt="Amigas viajando">
+            <img id="2" src="./assets/2.png" alt="Amigas viajando">
           </div>
           <div class="carousel-item">
-            <img id="3" src="./assets/3.png" class="d-block w-100" alt="Taxi seguro">
+            <img id="3" src="./assets/3.png" alt="Taxi seguro">
           </div>
           <div class="carousel-item">
-            <img id="4" src="./assets/4.png" class="d-block w-100" alt="Conexión de amigas">
+            <img id="4" src="./assets/4.png" alt="Conexión de amigas">
           </div>
           <div class="carousel-item">
-            <img id="5" src="./assets/5.png" class="d-block w-100" alt="Encuéntralo en FemTrek">
+            <img id="5" src="./assets/5.png" alt="Encuéntralo en FemTrek">
           </div>
         </div>
 
