--- a/principal/principal-carrusel.html
+++ b/principal/principal-carrusel.html
@@ -58,7 +58,7 @@
       img-fluid = escalar proporcionalmente.
       d-none = evita reproduccion automatica
       d-md-block = permite reproduccion en pantallas grandes y medianas-->
-  <video id="logo" class="img-fluid" autoplay alt="Logo con movimiento">
+  <video id="logo" class="img-fluid" autoplay muted loop alt="Logo con movimiento">
     <!-- tipo = especificar mp4 para que sea reconocido y visible---> 
     <source src="./assets/1_logo_video.mp4" type="video/mp4">
   </video>
@@ -67,43 +67,51 @@
   <!--Empieza CARRUSEL-->
   <section class="carousel">
     <!--data-ride permite iniciar el carrusel tan pronto se carga la pagina-->
-    <div id="carouselHome" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselHome" class="carouselslide" data-bs-ride="carousel">
       <!--INDICADORES: Botones al inferior del carrusel-->
       <ol class="carousel-indicators">
-        <!--1) data-target = identifacion del carrusel
-            2) data-slide-to = a que diapositiva ir cuando se da click
-            3) active = se debe agregar a alguna diapositiva para que sea visible-->
-        <li data-bstarget="#carouselHome" data-bs-slide-to="0" class="active"></li>
+        <!--1) data-bs-target = identificación del carrusel
+            2) data-bs-slide-to = a qué diapositiva ir cuando se da clic
+            3) class="active" = se debe agregar a alguna diapositiva para que sea visible-->
+        <li data-bs-target="#carouselHome" data-bs-slide-to="0" class="active"></li>
         <li data-bs-target="#carouselHome" data-bs-slide-to="1"></li>
         <li data-bs-target="#carouselHome" data-bs-slide-to="2"></li>
         <li data-bs-target="#carouselHome" data-bs-slide-to="3"></li>
-        <li data-bs-starget="#carouselHome" data-bs-slide-to="4"></li>
+        <li data-bs-target="#carouselHome" data-bs-slide-to="4"></li>
+        <li data-bs-target="#carouselHome" data-bs-slide-to="5"></li>
       </ol>
+    
 
       <!--DIAPOSITIVAS: Imagenes que se muestran en el carrusel-->
       <div class="carousel-inner">
       <!--DIAPOSITIVA 1-->
+      <div class="carousel-item active">
         <!--active = necesario en un solo elemento para que sea visible el carrusel-->
-      <!--DIAPOSITIVA 2-->
-        <div class="carousel-item active">
+        <video id="0" class="img-fluid d-block w-100" autoplay muted loop alt="video intro">
+          <!-- tipo = especificar mp4 para que sea reconocido y visible---> 
+          <source src="./assets/2_travel-video.mp4" type="video/mp4">
+        </video>
+      </div>
+       <!--DIAPOSITIVA 2-->
+        <div class="carousel-item">
           <!--d-block w-100 = para el ancho total de la pantalla-->
-          <img id="3" src="./assets/3_map.png" class="d-block w-100" alt="Mapa">
+          <img id="1" src="./assets/3_map.png" alt="Mapa" class="d-block w-100">
         </div>
       <!--DIAPOSITIVA 3-->
         <div class="carousel-item">
-          <img id="4" src="./assets/4_friends.png" class="d-block w-100" alt="Amigas viajando">
+          <img id="2" src="./assets/4_friends.png" alt="Amigas viajando" class="d-block w-100">
         </div>
       <!--DIAPOSITIVA 4-->
         <div class="carousel-item">
-          <img id="5" src="./assets/5_taxi.png" class="d-block w-100" alt="Taxi seguro">
+          <img id="3" src="./assets/5_taxi.png" alt="Taxi seguro" class="d-block w-100">
         </div>
       <!--DIAPOSITIVA 5-->
         <div class="carousel-item">
-          <img id="6" src="./assets/6_comunity.png" class="d-block w-100" alt="Conexión de amigas">
+          <img id="4" src="./assets/6_comunity.png" alt="Conexión de amigas" class="d-block w-100">
         </div>
       <!--DIAPOSITIVA 6-->
         <div class="carousel-item">
-          <img id="7" src="./assets/7_find_FemTrek.png" class="d-block w-100" alt="Encuéntralo en FemTrek">
+          <img id="5" src="./assets/7_find_FemTrek.png" alt="Encuéntralo en FemTrek" class="d-block w-100">
         </div>
       </div>
 
@@ -112,122 +120,123 @@
       <a class="carousel-control-prev"  href="#carouselHome" role="button" data-bs-slide="prev">
         <!--span = se usar por convencion, a diferencia de <div> que es un elemento de bloqueo, <span> es un elemento 'inline'.-->
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
+        <span class="visually-hidden">Previous</span>
       </a>
       <!--Boton del lado DERECHO (NEXT)-->
       <a class="carousel-control-next"  href="#carouselHome" role="button" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
+        <span class="visually-hidden">Next</span>
       </a>
     </div>
   </section>
-  </div>
+
+
     <!--Ques es FemTrek / Que hace-->
-  <div id="fem" class="about-FemTrek">
-    <h1 class="Que es FemTrek">
-      De mujeres para mujeres
-      <br>
-      Una app para viajar seguras
-    </h1>
-      <h3>
-        Generemos una comunidad de apoyo 
+    <div id="fem" class="about-FemTrek">
+      <h1 class="Que es FemTrek">
+        De mujeres para mujeres
         <br>
-        para no restringirnos de una vida plena.
-      </h3>
-  </div>
-  <div class="identidad-FemTrek">
-    <h1 class="Misión">
-      Misión
-    </h1>
-      <p>
-        Generar un espacio seguro, interactivo e innovador que permita la convivencia sana entre mujeres y las apoye en su movilidad, mejorando su sentimiento de seguridad a donde sea que vayan.
-      </p>
-    <h1 class="Visión">
-      Visión
-    </h1>
-      <p>
-        Ser la primera red social exclusivamente para mujeres latinoamericanas que les permita sentirse seguras en cuanto a movilidad, comunicación y convivencia.
-      </p>
-    <h1 class="Valores">
-      Valores
-    </h1>
-      <p>
-        Sororidad - Seguridad - Respeto - Transparencia
-      </p>
-  </div>
-
-    <!--Para agregar campos de registro o inicio de sesión-->
-    <div class="signIn-signUp">
-      <form action="/Pagina-registro/pagina-registro.html">
-        <a href="/Pagina-registro/pagina-registro.html" type="submit" id="btn">Regístrate</a>
-      </form>
-      <form action="/Iniciar_sesión/ingreso.html">
-        <a href="/Iniciar_sesión/ingreso.html" type="submit" id="btn">Iniciar Sesión</a>
-      </form>
+        Una app para viajar seguras
+      </h1>
+        <h3>
+          Generemos una comunidad de apoyo 
+          <br>
+          para no restringirnos de una vida plena.
+        </h3>
     </div>
-    <br>
-    <br>
-
-
-    <!--Pie de pagina-->
-    <div class="container text-center">
-      <div class="row">
-        <div class="col-sm">
-             <!--Botones para descargar app-->
-             <section class="footer_install">
-              <a href="#">
-              <button class="download" id="btn-android-apple"   type="button">
-                <i class="bi bi-google-play"> PlayStore</i>
-              </button>
+    <!--<div class="download">
+      <h1 class="Misión">
+        Misión
+      </h1>
+        <p>
+          Generar un espacio seguro, interactivo e innovador que permita la convivencia sana entre mujeres y las apoye en su movilidad, mejorando su sentimiento de seguridad a donde sea que vayan.
+        </p>
+      <h1 class="Visión">
+        Visión
+      </h1>
+        <p>
+          Ser la primera red social exclusivamente para mujeres latinoamericanas que les permita sentirse seguras en cuanto a movilidad, comunicación y convivencia.
+        </p>
+      <h1 class="Valores">
+        Valores
+      </h1>
+        <p>
+          Sororidad - Seguridad - Respeto - Transparencia
+        </p>
+    </div>-->
+  
+      <!--Para agregar campos de registro o inicio de sesión-->
+      <div class="signIn-signUp">
+        <form action="/Pagina-registro/pagina-registro.html">
+          <a href="/Pagina-registro/pagina-registro.html" type="submit" id="btn">Regístrate</a>
+        </form>
+        <form action="/Iniciar_sesión/ingreso.html">
+          <a href="/Iniciar_sesión/ingreso.html" type="submit" id="btn">Iniciar Sesión</a>
+        </form>
+      </div>
+      <br>
+      <br>
+  
+  
+      <!--Pie de pagina-->
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-sm">
+               <!--Botones para descargar app-->
+               <section class="footer_install">
+                <a href="#">
+                <button class="download" id="btn-android-apple"   type="button">
+                  <i class="bi bi-google-play"> PlayStore</i>
+                </button>
+                </a>
+                <a href="#">
+                <button class="download" id="btn-android-apple" type="button">
+                  <i class="bi bi-apple"> iStore</i>
+                </button>
+                </a>
+                </section>  
+          </div>
+          <div class="col-sm">
+            <section class="footer_social">
+              <a id="facebook" href="#">
+                <i class="bi bi-facebook"> Facebook</i>
               </a>
-              <a href="#">
-              <button class="download" id="btn-android-apple" type="button">
-                <i class="bi bi-apple"> iStore</i>
-              </button>
+              <a id="Instagram" href="#">
+                <i class="bi bi-instagram"> Instagram</i>
               </a>
-              </section>  
-        </div>
-        <div class="col-sm">
-          <section class="footer_social">
-            <a id="facebook" href="#">
-              <i class="bi bi-facebook"> Facebook</i>
-            </a>
-            <a id="Instagram" href="#">
-              <i class="bi bi-instagram"> Instagram</i>
-            </a>
-     </section>
-        </div>
-        <div class="col-sm">
-        <!--Contacto-->
-        <section class="footer_contact">
-          <ul>
-          <li>
-             FemTrek para empresas
-            <a href="#">empresarial@femtrek.com</a>
-          </li>
-          <li>
-             Prensa
-            <a href="#">prensa@femtrek.com</a>
-          </li>
-          <li>
-             ¿Algo más?
-            <a href="#">info@femtrek.com</a>
-          </li>
-          </ul>
        </section>
-
+          </div>
+          <div class="col-sm">
+          <!--Contacto-->
+          <section class="footer_contact">
+            <ul>
+            <li>
+               FemTrek para empresas
+              <a href="#">empresarial@femtrek.com</a>
+            </li>
+            <li>
+               Prensa
+              <a href="#">prensa@femtrek.com</a>
+            </li>
+            <li>
+               ¿Algo más?
+              <a href="#">info@femtrek.com</a>
+            </li>
+            </ul>
+         </section>
+  
+          </div>
         </div>
       </div>
-    </div>
-
-        <!--Copyright--> 
-        <section class="footer_copyright">
-          <p>
-            © 2021 FemTrek. Todos los derechos reservados.
-          </p>
-        </section>
-      </footer>
-    </div>
+  
+          <!--Copyright--> 
+          <section class="footer_copyright">
+            <p>
+              © 2021 FemTrek. Todos los derechos reservados.
+            </p>
+          </section>
+        </footer>
+      </div>
 
      <script src="./principal-carrusel.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
