Changes in carousel slides

--- a/principal/principal-carrusel.html
+++ b/principal/principal-carrusel.html
@@ -89,7 +89,7 @@
         <!--active = necesario en un solo elemento para que sea visible el carrusel-->
         <video id="0" class="img-fluid d-block w-100" autoplay muted loop alt="video intro">
           <!-- tipo = especificar mp4 para que sea reconocido y visible---> 
-          <source src="./assets/2_travel-video.mp4" type="video/mp4">
+          <source src="./assets/2_travel-video.mp4" type="video/mp4" class="img-fluid d-block w-100">
         </video>
       </div>
        <!--DIAPOSITIVA 2-->
