--- a/html/Iniciar-Sesion.html
+++ b/html/Iniciar-Sesion.html
@@ -85,7 +85,7 @@
 
             <!-- Submit button -->
             <div class="col d-flex justify-content-center">
-              <a href="./Mi-Perfil.html" id="boton" class="btn btn-success" onclick="acceso()">Ingresar</a>
+              <a href="../html/Home.html" id="boton" class="btn btn-success" onclick="acceso()">Ingresar</a>
           </div>
           <br>
             <br>
