Agrego y valido en página de registro nombre/nickname de usuaria

--- a/html/Registro.html
+++ b/html/Registro.html
@@ -101,6 +101,11 @@
             <input type="text" class="form-control" id="userLastNames" name="txt_lastnames" placeholder="Félix">
           </div>
 
+          <div class="mb-3">
+            <label class="form-label">Nombre de usuaria</label>
+            <input type="user" class="form-control" id="userNickname" name="txt_user" placeholder="@ejemplo">
+          </div>
+
         <div class="mb-3">
         <label class="form-label">Correo electrónico</label>
         <input type="email" class="form-control" id="userEmail" name="txt_email" placeholder="nombre@ejemplo.com">
