--- a/html/Home.html
+++ b/html/Home.html
@@ -182,7 +182,7 @@
               <div class="row mb-4">
                 <div class="col d-flex justify-content-center">
                   <div class="text-center">
-                    <a href="../html/Recuperar-Password.html">¿Olvidaste tu contraseña?</a>
+                    <a href="/html/Password-Reestablecer.html">¿Olvidaste tu contraseña?</a>
                   </div>
                 </div>
               </div>
