--- a/html/Password-Reestablecer.html
+++ b/html/Password-Reestablecer.html
@@ -23,7 +23,7 @@
             <div class="container-fluid">
 
                 <!--Esta parte contiene el logo de nuestro producto-->
-                <a class="navbar-brand" href="../html/Home.html">
+                <a class="navbar-brand" href="/html/Home.html">
                     <img src="../public/logo-vectorizado.png" alt="Logo" width="130" height="50" class="d-inline-block align-text-top">
                   </a>
                   <!--Toggler es el botón que se despliega como menú colapsable cuando la pantalla está chiquita-->
