reincorporación de estilos, scripts y algunos ajustes

--- a/html/Home.html
+++ b/html/Home.html
@@ -178,10 +178,10 @@
       <!--Para agregar campos de registro o inicio de sesión-->
       <div class="signIn-signUp">
         <form action="/Pagina-registro/pagina-registro.html">
-          <a href="/Pagina-registro/pagina-registro.html" type="submit" id="btn">Regístrate</a>
+          <a href="/html/Registro.html" type="submit" id="btn">Regístrate</a>
         </form>
         <form action="/Iniciar_sesión/ingreso.html">
-          <a href="/Iniciar_sesión/ingreso.html" type="submit" id="btn">Iniciar Sesión</a>
+          <a href="/html/Iniciar-Sesion.html" type="submit" id="btn">Iniciar Sesión</a>
         </form>
       </div>
       <br>
