--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -105,7 +105,7 @@
                     
                     </div>
                     <div class="mb-3">
-                      <label for="email" class="form-label">Correo Electronico</label>
+                      <label for="email" class="form-label">Correo Electrónico</label>
                       <input type="email" class="form-control" id="email" placeholder="name@example.com">
                     </div>
                     <div class="mb-3">
